<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/border"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/new_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <TextView
                android:text="@string/source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_weight="1"/>
        </LinearLayout>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_dots"
            android:id="@+id/imageButton"
            android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/new_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <TextView
                android:text="@string/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/textView2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:text="Additional time needed:"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/extraTimeDescription"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_weight="0.98"/>

        <TextView
            android:text="@string/additionalTimeSmall"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:id="@+id/extra_time"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.98">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_action_favorite"
            android:id="@+id/imageView3"
            />

        <TextView
            android:text=" Points awarded:"
            android:layout_width="148dp"
            android:id="@+id/bonusPointsDescription"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_height="match_parent"/>

        <TextView
            android:text="@string/additionalBonusSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/extra_bonus_points"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>
</LinearLayout>
</LinearLayout>